# talkie-generalization-e993-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/post1930_probes/: README.md  probes.jsonl  seed_probes.jsonl
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: historical_language_model_corpus_pre_1930_time-locked_LLM_20260512_020251.jsonl  knowledge_cutoff_temporal_LLM_evaluation_benchmark_20260512_015833.jsonl
papers/: README.md
papers/pages/: 2407.14985_generalization_vs_memorization_manifest.txt  2506.11440_absencebench_holtzman_manifest.txt
results/: aggregated.json  humaneval_1930_k3.json  humaneval_1930_k3_progress.jsonl  humaneval_gpt41.json  humaneval_web_k3.json  humaneval_web_k3_progress.jsonl  mmlu_1930.json  mmlu_gpt41.json  mmlu_web.json  probes_1930.json  probes_gpt41.json  probes_web.json
src/: analyze.py  build_probes.py  datasets_io.py  date_strata.py  run_all_talkie.py  run_humaneval.py  run_humaneval_openai.py  run_mmlu.py  run_openai_baseline.py  run_probes.py  sandbox.py  scoring.py
(+4 files in other folders)
