[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for Talkie generalization experiments"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
